--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-03-02 18:09-0600\n"
+"PO-Revision-Date: 2021-03-10 17:19-0600\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -800,7 +800,6 @@ msgid "User-defined functions"
 msgstr "Funciones definidas por el usuario"
 
 #: ../Doc/reference/datamodel.rst:460
-#, fuzzy
 msgid ""
 "A user-defined function object is created by a function definition (see "
 "section :ref:`function`).  It should be called with an argument list "
@@ -962,7 +961,6 @@ msgstr ""
 "valor asignado."
 
 #: ../Doc/reference/datamodel.rst:542
-#, fuzzy
 msgid ""
 "Function objects also support getting and setting arbitrary attributes, "
 "which can be used, for example, to attach metadata to functions.  Regular "
@@ -1003,7 +1001,6 @@ msgid "Instance methods"
 msgstr "Métodos de instancia"
 
 #: ../Doc/reference/datamodel.rst:562
-#, fuzzy
 msgid ""
 "An instance method object combines a class, a class instance and any "
 "callable object (normally a user-defined function)."
@@ -2087,7 +2084,6 @@ msgstr ""
 "ejemplo: ``super().__init__([args…])``."
 
 #: ../Doc/reference/datamodel.rst:1203
-#, fuzzy
 msgid ""
 "Because :meth:`__new__` and :meth:`__init__` work together in constructing "
 "objects (:meth:`__new__` to create it, and :meth:`__init__` to customize "
@@ -3542,7 +3538,6 @@ msgstr ""
 "definida y el nombre de un descriptor particular asignado;"
 
 #: ../Doc/reference/datamodel.rst:2029
-#, fuzzy
 msgid ""
 "finally, the :meth:`~object.__init_subclass__` hook is called on the "
 "immediate parent of the new class in its method resolution order."
@@ -4526,42 +4521,53 @@ msgid ""
 "Starting with Python 3.7, ``__aiter__`` must return an asynchronous iterator "
 "object.  Returning anything else will result in a :exc:`TypeError` error."
 msgstr ""
+"A partir de Python 3.7, ``__aiter__`` debe retornar un objeto iterador "
+"asíncrono. Retornar cualquier otra cosa resultará en un error :exc:"
+"`TypeError`."
 
 #: ../Doc/reference/datamodel.rst:2723
 msgid "Asynchronous Context Managers"
-msgstr ""
+msgstr "Gestores de Contexto Asíncronos"
 
 #: ../Doc/reference/datamodel.rst:2725
 msgid ""
 "An *asynchronous context manager* is a *context manager* that is able to "
 "suspend execution in its ``__aenter__`` and ``__aexit__`` methods."
 msgstr ""
+"Un *gestor de contexto asíncrono* es un *gestor de contexto* que puede "
+"suspender la ejecución en sus métodos ``__aenter__`` y ``__aexit__``."
 
 #: ../Doc/reference/datamodel.rst:2728
 msgid ""
 "Asynchronous context managers can be used in an :keyword:`async with` "
 "statement."
 msgstr ""
+"Los gestores de contexto asíncronos pueden ser utilizados en una "
+"declaración :keyword:`async with`."
 
 #: ../Doc/reference/datamodel.rst:2732
 msgid ""
 "Semantically similar to :meth:`__enter__`, the only difference being that it "
 "must return an *awaitable*."
 msgstr ""
+"Semánticamente similar a :meth:`__enter__`, siendo la única diferencia que "
+"debe retorna un *esperable*."
 
 #: ../Doc/reference/datamodel.rst:2737
 msgid ""
 "Semantically similar to :meth:`__exit__`, the only difference being that it "
 "must return an *awaitable*."
 msgstr ""
+"Semánticamente similar a :meth:`__exit__`, siendo la única diferencia que "
+"debe retornar un *esperable*."
 
 #: ../Doc/reference/datamodel.rst:2740
 msgid "An example of an asynchronous context manager class::"
-msgstr ""
+msgstr "Un ejemplo de una clase de gestor de contexto asíncrono::"
 
 #: ../Doc/reference/datamodel.rst:2753
 msgid "Footnotes"
-msgstr ""
+msgstr "Notas a pie de página"
 
 #: ../Doc/reference/datamodel.rst:2754
 msgid ""
@@ -4569,6 +4575,9 @@ msgid ""
 "controlled conditions. It generally isn't a good idea though, since it can "
 "lead to some very strange behaviour if it is handled incorrectly."
 msgstr ""
+"Es posible cambiar en algunos casos un tipo de objeto bajo ciertas "
+"circunstancias controladas. Generalmente no es buena idea, ya que esto puede "
+"llevar a un comportamiento bastante extraño de no ser tratado correctamente."
 
 #: ../Doc/reference/datamodel.rst:2758
 msgid ""
@@ -4577,6 +4586,10 @@ msgid ""
 "raise a :exc:`TypeError`, but may do so by relying on the behavior that "
 "``None`` is not callable."
 msgstr ""
+"Los métodos :meth:`__hash__`, :meth:`__iter__`, :meth:`__reversed__`, y :"
+"meth:`__contains__` tienen manejo especial para esto; otros lanzarán un "
+"error :exc:`TypeError`, pero lo harán dependiendo del comportamiento de que "
+"``None`` no se puede llamar."
 
 #: ../Doc/reference/datamodel.rst:2763
 msgid ""
@@ -4585,6 +4598,11 @@ msgid ""
 "want to force fallback to the right operand's reflected method—that will "
 "instead have the opposite effect of explicitly *blocking* such fallback."
 msgstr ""
+"“No soporta” aquí significa que la clase no tiene tal método, o el método "
+"retorna ``NotImplemented``. No establecer el método a ``None`` si se quiere "
+"forzar el retroceso al método reflejado del operando correcto—eso, por el "
+"contrario, tendrá un efecto opuesto de bloquear explícitamente dicho "
+"retroceso."
 
 #: ../Doc/reference/datamodel.rst:2769
 msgid ""
@@ -4592,3 +4610,6 @@ msgid ""
 "method (such as :meth:`__add__`) fails the operation is not supported, which "
 "is why the reflected method is not called."
 msgstr ""
+"Para operandos del mismo tipo, se asume que si el método no reflejado (como :"
+"meth:`__add__`) falla, la operación no es soportada, por lo cual el método "
+"reflejado no es llamado."
