Realizo las correcciones

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-02-03 19:54-0300\n"
+"PO-Revision-Date: 2021-03-15 15:48-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/howto/functional.rst:3
 msgid "Functional Programming HOWTO"
-msgstr "Cómo hacer programación funcional"
+msgstr "HOWTO - Programación funcional"
 
 #: ../Doc/howto/functional.rst
 msgid "Author"
@@ -173,9 +173,9 @@ msgstr ""
 "funciones. Cada función opera sobre su entrada y produce alguna salida. El "
 "estilo funcional desalienta las funciones con efectos secundarios que "
 "modifican el estado interno o hacen otros cambios que no son visibles en el "
-"valor de retorno de la función. Las funciones que no tienen efectos "
-"secundarios en absoluto se llaman **puramente funcionales**. Evitar los "
-"efectos secundarios significa no usar estructuras de datos que se actualicen "
+"valor de retorno de la función. Las funciones que no tienen ningún efecto "
+"secundario se llaman **puramente funcionales**. Evitar los efectos "
+"secundarios significa no usar estructuras de datos que se actualicen "
 "mientras se ejecuta un programa; cada salida de la función debe depender "
 "solo de su entrada."
 
@@ -192,10 +192,10 @@ msgstr ""
 "Algunos lenguajes son muy estrictos sobre la pureza y ni siquiera tienen "
 "sentencias de asignación como ``a=3`` o ``c = a + b``, pero es difícil "
 "evitar todos los efectos secundarios. Imprimir en la pantalla o escribir en "
-"un archivo en disco son efectos secundarios, por ejemplo. Por ejemplo, en "
-"Python una llamada a la función :func:`print` o :func:`time.sleep` retorna "
-"un valor inútil; solo se llaman por sus efectos secundarios de enviar algún "
-"texto a la pantalla o pausar la ejecución por un segundo."
+"un archivo en disco son efectos secundarios. Por ejemplo, en Python una "
+"llamada a la función :func:`print` o :func:`time.sleep` retorna un valor "
+"inútil; solo se llaman por sus efectos secundarios de enviar algún texto a "
+"la pantalla o pausar la ejecución por un segundo."
 
 #: ../Doc/howto/functional.rst:74
 msgid ""
@@ -332,7 +332,7 @@ msgid ""
 "wrongly believe you've proved the program correct."
 msgstr ""
 "Desafortunadamente, demostrar que los programas son correctos es en gran "
-"parte impráctico y no relevante al software de Python. Aún los programas "
+"parte impráctico y no relevante al software de Python. Incluso los programas "
 "triviales requieren demostraciones que tienen varias páginas; la "
 "demostración de correctitud para un programa moderadamente complicado sería "
 "enorme, y pocos o ninguno de los programas que usa diariamente (el "
@@ -469,7 +469,7 @@ msgid ""
 "lists and dictionaries.  An object is called :term:`iterable` if you can get "
 "an iterator for it."
 msgstr ""
-"La función integrada :func:`iter` recibe un objeto arbitrario e intenta "
+"La función incorporada :func:`iter` recibe un objeto arbitrario e intenta "
 "retornar un iterador que retornará los contenidos o elementos del objeto, "
 "lanzando :exc:`TypeError` si el objeto no soporta iteración. Muchos tipos de "
 "datos integrados de Python soportan iteración, siendo los más comunes las "
@@ -518,7 +518,7 @@ msgid ""
 "func:`min` will never return, and if the element X never appears in the "
 "stream, the ``\"in\"`` and ``\"not in\"`` operators won't return either."
 msgstr ""
-"Las funciones integradas como :func:`max` y :func:`min` pueden recibir un "
+"Las funciones incorporadas como :func:`max` y :func:`min` pueden recibir un "
 "solo iterador como argumento y retornarán el elemento más grande o más "
 "pequeño. Los operadores ``\"in\"`` y ``\"not in\"`` también soportan "
 "iteradores: ``X in iterator`` es verdadero si X se encuentra en el flujo que "
@@ -787,7 +787,7 @@ msgid ""
 "function where it left off?  This is what generators provide; they can be "
 "thought of as resumable functions."
 msgstr ""
-"Sin duda está familiarizado con cómo funcionan las llamadas a funciones "
+"Sin duda está relacionado con cómo funcionan las llamadas a funciones "
 "regulares en Python o C. Cuando llama a una función, esta obtiene su espacio "
 "de nombres privado donde se crean sus variables locales. Cuando la función "
 "alcanza una sentencia ``return``, las variables locales son destruidas y el "
@@ -1060,13 +1060,13 @@ msgstr ""
 
 #: ../Doc/howto/functional.rst:618
 msgid "Built-in functions"
-msgstr "Funciones integradas"
+msgstr "Funciones incorporadas"
 
 #: ../Doc/howto/functional.rst:620
 msgid ""
 "Let's look in more detail at built-in functions often used with iterators."
 msgstr ""
-"Veamos con más detalle las funciones integradas usadas a menudo con "
+"Veamos con más detalle las funciones incorporadas usadas a menudo con "
 "iteradores."
 
 #: ../Doc/howto/functional.rst:622
@@ -1074,7 +1074,7 @@ msgid ""
 "Two of Python's built-in functions, :func:`map` and :func:`filter` duplicate "
 "the features of generator expressions:"
 msgstr ""
-"Dos de las funciones integradas de Python, :func:`map` y :func:`filter` "
+"Dos de las funciones incorporadas de Python, :func:`map` y :func:`filter` "
 "duplican las características de las expresiones generadoras:"
 
 #: ../Doc/howto/functional.rst:634
@@ -1157,7 +1157,7 @@ msgid ""
 "any element in the iterable is a true value, and :func:`all` returns "
 "``True`` if all of the elements are true values:"
 msgstr ""
-"Las funciones integradas :func:`any(iter) <any>` y :func:`all(iter) <all>` "
+"Las funciones incorporadas :func:`any(iter) <any>` y :func:`all(iter) <all>` "
 "ven los valores de verdad de los contenidos de un iterable. :func:`any` "
 "retorna ``True`` si algún elemento en el iterable es un valor verdadero, y :"
 "func:`all` retorna ``True`` si todos los elementos son valores verdaderos:"
@@ -1594,8 +1594,8 @@ msgid ""
 "special built-in called :func:`sum` to compute it:"
 msgstr ""
 "Si usa :func:`operator.add` con :func:`functools.reduce`, sumará todos los "
-"elementos del iterable. Este caso es tan común que hay una función integrada "
-"especial llamada :func:`sum` para calcularla:"
+"elementos del iterable. Este caso es tan común que hay una función "
+"incorporada especial llamada :func:`sum` para calcularla:"
 
 #: ../Doc/howto/functional.rst:1055
 msgid ""
@@ -1685,8 +1685,8 @@ msgid ""
 "If there's a Python built-in or a module function that's suitable, you don't "
 "need to define a new function at all::"
 msgstr ""
-"Si hay una función integrada o un módulo de Python, no necesita definir una "
-"nueva función en absoluto::"
+"Si hay una función incorporada o un módulo de Python, no necesita definir "
+"una nueva función en absoluto::"
 
 #: ../Doc/howto/functional.rst:1110
 msgid ""
@@ -1750,7 +1750,7 @@ msgstr ""
 
 #: ../Doc/howto/functional.rst:1157
 msgid "Or the :func:`sum` built-in and a generator expression::"
-msgstr "O la función integrada :func:`sum` y una expresión generadora::"
+msgstr "O la función incorporada :func:`sum` y una expresión generadora::"
 
 #: ../Doc/howto/functional.rst:1161
 msgid ""
