--- a/howto/functional.po
+++ b/howto/functional.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2021-03-15 15:48-0300\n"
+"PO-Revision-Date: 2021-03-18 13:21-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1177,11 +1177,11 @@ msgid ""
 "they're requested.  (The technical term for this behaviour is `lazy "
 "evaluation <https://en.wikipedia.org/wiki/Lazy_evaluation>`__.)"
 msgstr ""
-"No construye una lista en memoria y agota todos los iteradores de entrada "
-"antes de ejecutar; en lugar de eso, las tuplas se construyen y retornan solo "
-"si son requeridas. (El término técnico para este comportamiento es "
-"`evaluación perezosa <https://es.wikipedia.org/wiki/Evaluaci"
-"%C3%B3n_perezosa>`__.)"
+"Esto no construye una lista en memoria y consume todos los iteradores de "
+"entrada antes de ejecutar; en lugar de eso, las tuplas se construyen y "
+"retornan solo si son requeridas. (El término técnico para este "
+"comportamiento es `evaluación perezosa <https://es.wikipedia.org/wiki/"
+"Evaluaci%C3%B3n_perezosa>`__.)"
 
 #: ../Doc/howto/functional.rst:723
 msgid ""
@@ -1275,7 +1275,8 @@ msgid ""
 "provided. ::"
 msgstr ""
 ":func:`itertools.repeat(elem, [n]) <itertools.repeat>` retorna el elemento "
-"provisto *n* veces, o retorna el elemento sin fin si no se provee *n*. ::"
+"provisto *n* veces, o retorna el elemento indefinidamente si no se provee "
+"*n*. ::"
 
 #: ../Doc/howto/functional.rst:778
 msgid ""
@@ -1320,12 +1321,12 @@ msgstr ""
 "retorna *n* iteradores independientes que retornarán los contenidos del "
 "iterador fuente. Si no suministra un valor para *n*, por defecto es 2. "
 "Replicar iteradores requiere guardar algunos de los contenidos del iterador "
-"fuente, así este puede consumir memoria significativa si el iterador es "
-"grande y uno de los nuevos iteradores se consume más que los otros. ::"
+"fuente, esto puede consumir memoria significativa si el iterador es grande y "
+"uno de los nuevos iteradores se consume más que los otros. ::"
 
 #: ../Doc/howto/functional.rst:819
 msgid "Calling functions on elements"
-msgstr "Llamar funciones con los elementos"
+msgstr "Aplicar funciones a los elementos"
 
 #: ../Doc/howto/functional.rst:821
 msgid ""
@@ -1361,7 +1362,7 @@ msgid ""
 "on a predicate."
 msgstr ""
 "Otro grupo de funciones elige un subconjunto de elementos de un iterador "
-"basado en un predicado."
+"basado en un predicado dado."
 
 #: ../Doc/howto/functional.rst:844
 msgid ""
@@ -1540,9 +1541,9 @@ msgid ""
 msgstr ""
 "Para programas escritos en un estilo funcional, a veces querrá construir "
 "variantes de funciones existentes que tienen algunos de los parámetros "
-"rellenados. Considere una función de Python ``f(a, b, c)``; puede querer "
+"predefinidos. Considere una función de Python ``f(a, b, c)``; puede querer "
 "crear una nueva función ``g(b, c)`` que sea equivalente a ``f(1, b, c)``; "
-"está rellenando un valor para uno de los parámetros de ``f()``. Esto se "
+"está completando un valor para uno de los parámetros de ``f()``. Esto se "
 "llama \"aplicación parcial de funciones\"."
 
 #: ../Doc/howto/functional.rst:1002
