powrap reference/simple_stmts

--- a/reference/simple_stmts.po
+++ b/reference/simple_stmts.po
@@ -71,8 +71,8 @@ msgid ""
 "``None``, so that procedure calls do not cause any output.)"
 msgstr ""
 "En modo interactivo, si el valor no es ``None``, es convertido a cadena de "
-"caracteres usando la función built-in :func:`repr` y la cadena resultante "
-"es escrita en la salida estándar en una línea por si sola (excepto si el "
+"caracteres usando la función built-in :func:`repr` y la cadena resultante es "
+"escrita en la salida estándar en una línea por si sola (excepto si el "
 "resultado es ``None``, entonces el procedimiento llamado no produce ninguna "
 "salida.)"
 
@@ -241,13 +241,13 @@ msgid ""
 msgstr ""
 "Nota: Si el objeto es una instancia de clase y la referencia de atributo "
 "ocurre en ambos lados del operador de asignación, la expresión del lado "
-"derecho, ``a.x`` puede acceder a un atributo de instancia o (si no existe "
-"un atributo de instancia) a una clase atributo. El objetivo del lado "
-"izquierdo ``a.x`` siempre se establece como un atributo de instancia, "
-"creándolo si es necesario. Por lo tanto, las dos ocurrencias de ``a.x`` no "
-"necesariamente se refieren al mismo atributo: si la expresión del lado "
-"derecho se refiere a un atributo de clase, el lado izquierdo crea un nuevo "
-"atributo de instancia como el objetivo de la asignación::"
+"derecho, ``a.x`` puede acceder a un atributo de instancia o (si no existe un "
+"atributo de instancia) a una clase atributo. El objetivo del lado izquierdo "
+"``a.x`` siempre se establece como un atributo de instancia, creándolo si es "
+"necesario. Por lo tanto, las dos ocurrencias de ``a.x`` no necesariamente se "
+"refieren al mismo atributo: si la expresión del lado derecho se refiere a un "
+"atributo de clase, el lado izquierdo crea un nuevo atributo de instancia "
+"como el objetivo de la asignación::"
 
 #: ../Doc/reference/simple_stmts.rst:185
 msgid ""
