Traducidas últimas entradas

--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-06-09 20:48-0500\n"
-"Last-Translator: Carlos Joel Delgado Pizarro <cj@carlosjoel.net>\n"
+"PO-Revision-Date: 2021-03-19 22:57+0100\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 2.4.1\n"
 
 #: ../Doc/reference/datamodel.rst:6
 msgid "Data model"
@@ -295,6 +296,10 @@ msgid ""
 "currently evaluates as true, it will emit a :exc:`DeprecationWarning`. It "
 "will raise a :exc:`TypeError` in a future version of Python."
 msgstr ""
+"La evaluación de ``NotImplemented`` en un contexto booleano está en desuso. "
+"Si bien actualmente se evalúa como verdadero, lanzará un :exc:"
+"`DeprecationWarning`. Lanzará un :exc:`TypeError` en una versión futura de "
+"Python."
 
 #: ../Doc/reference/datamodel.rst:179
 msgid "Ellipsis"
@@ -334,32 +339,40 @@ msgid ""
 "The string representations of the numeric classes, computed by :meth:"
 "`__repr__` and :meth:`__str__`, have the following properties:"
 msgstr ""
+"Las representaciones de cadena de las clases numéricas, calculadas por :meth:"
+"`__repr__` y :meth:`__str__`, tienen las siguientes propiedades:"
 
 #: ../Doc/reference/datamodel.rst:194
 msgid ""
 "They are valid numeric literals which, when passed to their class "
 "constructor, produce an object having the value of the original numeric."
 msgstr ""
+"Son literales numéricos válidos que, cuando se pasan a su constructor de "
+"clase, producen un objeto que tiene el valor del numérico original."
 
 #: ../Doc/reference/datamodel.rst:198
 msgid "The representation is in base 10, when possible."
-msgstr ""
+msgstr "La representación está en base 10, cuando sea posible."
 
 #: ../Doc/reference/datamodel.rst:200
 msgid ""
 "Leading zeros, possibly excepting a single zero before a decimal point, are "
 "not shown."
 msgstr ""
+"Los ceros iniciales, posiblemente excepto un solo cero antes de un punto "
+"decimal, no se muestran."
 
 #: ../Doc/reference/datamodel.rst:203
 msgid ""
 "Trailing zeros, possibly excepting a single zero after a decimal point, are "
 "not shown."
 msgstr ""
+"Los ceros finales, posiblemente excepto un solo cero después de un punto "
+"decimal, no se muestran."
 
 #: ../Doc/reference/datamodel.rst:206
 msgid "A sign is shown only when the number is negative."
-msgstr ""
+msgstr "Solo se muestra un signo cuando el número es negativo."
 
 #: ../Doc/reference/datamodel.rst:208
 msgid ""
@@ -839,16 +852,15 @@ msgid "User-defined functions"
 msgstr "Funciones definidas por el usuario"
 
 #: ../Doc/reference/datamodel.rst:482
-#, fuzzy
 msgid ""
 "A user-defined function object is created by a function definition (see "
 "section :ref:`function`).  It should be called with an argument list "
 "containing the same number of items as the function's formal parameter list."
 msgstr ""
-"Una objeto del tipo función, definida por el usuario, es creado por un "
-"definición de función (vea la sección :ref:`function`). Debe llamarse con "
-"una lista de argumentos que contenga el mismo número de elementos que la "
-"lista de parámetros formales de la función."
+"Un objeto función definido por el usuario, es creado por un definición de "
+"función (vea la sección :ref:`function`). Debe llamarse con una lista de "
+"argumentos que contenga el mismo número de elementos que la lista de "
+"parámetros formales de la función."
 
 #: ../Doc/reference/datamodel.rst:487
 msgid "Special attributes:"
@@ -1042,7 +1054,6 @@ msgid "Instance methods"
 msgstr "Métodos de instancia"
 
 #: ../Doc/reference/datamodel.rst:584
-#, fuzzy
 msgid ""
 "An instance method object combines a class, a class instance and any "
 "callable object (normally a user-defined function)."
@@ -2393,12 +2404,15 @@ msgid ""
 "``x<=y``. To automatically generate ordering operations from a single root "
 "operation, see :func:`functools.total_ordering`."
 msgstr ""
-"Por defecto, :meth:`__ne__` delega a :meth:`__eq__` e invierte el resultado "
-"a menos que éste sea ``NotImplemented``. No existen otras relaciones "
-"implícitas entre los operadores de comparación, por ejemplo, la verdad de "
-"``(x<y or x==y)`` no implica que ``x<=y``. Para generar automáticamente "
-"operaciones de ordenamiento a partir de una sola operación raíz, ver :func:"
-"`functools.total_ordering`."
+"Por defecto, ``object`` implementa :meth:`__eq__` usando ``is``, retornando "
+"``NotImplemented`` en el caso de una comparación falsa: ``True if x is y "
+"else NotImplemented``. Para :meth:`__ne__`, por defecto delega a :meth:"
+"`__eq__` e invierte el resultado a menos que sea ``NotImplemented``. No hay "
+"otras relaciones implícitas entre los operadores de comparación o "
+"implementaciones predeterminadas; por ejemplo, la verdad de ``(x <y o x == "
+"y)`` no implica ``x <= y``. Para generar automáticamente operaciones de "
+"pedido a partir de una sola operación raíz, consulte :func:`functools."
+"total_ordering`."
 
 #: ../Doc/reference/datamodel.rst:1406
 msgid ""
@@ -2688,12 +2702,17 @@ msgid ""
 "Raises an :ref:`auditing event <auditing>` ``object.__getattr__`` with "
 "arguments ``obj``, ``name``."
 msgstr ""
+"Lanza un :ref:`evento de auditoría <auditing>` ``object.__getattr__`` con "
+"argumentos ``obj``, ``name``."
 
 #: ../Doc/reference/datamodel.rst:1564
 msgid ""
 "For certain sensitive attribute accesses, raises an :ref:`auditing event "
 "<auditing>` ``object.__getattr__`` with arguments ``obj`` and ``name``."
 msgstr ""
+"Para ciertos accesos a atributos sensibles, lanza un :ref:`evento de "
+"auditoría <auditing>` ``object.__getattr__`` con los argumentos ``obj`` y "
+"``name``."
 
 #: ../Doc/reference/datamodel.rst:1571
 msgid ""
@@ -2721,6 +2740,8 @@ msgid ""
 "Raises an :ref:`auditing event <auditing>` ``object.__setattr__`` with "
 "arguments ``obj``, ``name``, ``value``."
 msgstr ""
+"Lanza un :ref:`evento de auditoría <auditing>` ``object.__setattr__`` con "
+"argumentos ``obj``, ``name``, ``value``."
 
 #: ../Doc/reference/datamodel.rst:1581
 msgid ""
@@ -2728,6 +2749,9 @@ msgid ""
 "<auditing>` ``object.__setattr__`` with arguments ``obj``, ``name``, "
 "``value``."
 msgstr ""
+"Para ciertas asignaciones de atributos sensibles, genera un :ref:`evento de "
+"auditoría <auditing>` ``object.__setattr__`` con argumentos ``obj``, "
+"``name``, ``value``."
 
 #: ../Doc/reference/datamodel.rst:1588
 msgid ""
@@ -2744,12 +2768,17 @@ msgid ""
 "Raises an :ref:`auditing event <auditing>` ``object.__delattr__`` with "
 "arguments ``obj``, ``name``."
 msgstr ""
+"Lanza un :ref:`evento de auditoría <auditing>` ``object.__delattr__`` con "
+"argumentos ``obj``, ``name``."
 
 #: ../Doc/reference/datamodel.rst:1593
 msgid ""
 "For certain sensitive attribute deletions, raises an :ref:`auditing event "
 "<auditing>` ``object.__delattr__`` with arguments ``obj`` and ``name``."
 msgstr ""
+"Para ciertas eliminaciones de atributos sensibles, genera un :ref:`evento de "
+"auditoría <auditing>` ``object.__delattr__`` con argumentos ``obj`` y "
+"``name``."
 
 #: ../Doc/reference/datamodel.rst:1600
 msgid ""
@@ -3088,9 +3117,10 @@ msgstr ""
 "alguno, es un descriptor sin datos. Normalmente los descriptores de datos "
 "definen ambos :meth:`__get__` y :meth:`__set__`, mientras que los "
 "descriptores sin datos solo tienen el método :meth:`__get__`. Descriptores "
-"de datos con :meth:`__set__` y :meth:`__get__` definidos siempre anulan una "
-"re-definición en el diccionario de instancias. Por el contrario, los "
-"descriptores sin datos pueden ser anulados por instancias."
+"de datos con :meth:`__set__` y :meth:`__get__` (o :meth:`__delete__`) "
+"definidos siempre anulan una re-definición en el diccionario de instancias. "
+"Por el contrario, los descriptores sin datos pueden ser anulados por "
+"instancias."
 
 #: ../Doc/reference/datamodel.rst:1789
 msgid ""
@@ -4202,6 +4232,9 @@ msgid ""
 "meth:`__ipow__` but returns ``NotImplemented`` would fail to fall back to "
 "``x.__pow__(y)`` and ``y.__rpow__(x)``. This bug is fixed in Python 3.10."
 msgstr ""
+"Debido a un error en el mecanismo de envío de ``**=``, una clase que define :"
+"meth:`__ipow__` pero retorna ``NotImplemented`` no podría volver a ``x."
+"__pow__(y)`` y ``y.__rpow__(x)``. Este error se corrigió en Python 3.10."
 
 #: ../Doc/reference/datamodel.rst:2465
 msgid ""
