Devolver -> Retornar, Generar -> Lanzar

--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -1189,13 +1189,13 @@ msgid ""
 msgstr ""
 "Una función o método que utiliza la declaración :keyword:`yield` (ver "
 "sección :ref:`yield`) se llama :dfn:`generator function`.  Dicha función, "
-"cuando es invocada, siempre devuelve un objeto iterador que puede ser "
+"cuando es invocada, siempre retorna un objeto iterador que puede ser "
 "utilizado para ejecutar el cuerpo de la función:  invocando el método "
 "iterador :meth:`iterator.__next__` hará que la función se ejecute hasta "
 "proporcionar un valor utilizando la declaración :keyword:`!yield`.  Cuando "
 "la función ejecuta una declaración :keyword:`return` o llega hasta el final, "
 "una excepción :exc:`StopIteration` es lanzada y el iterador habrá llegado al "
-"final del conjunto de valores a ser devueltos."
+"final del conjunto de valores a ser retornados."
 
 #: ../Doc/reference/datamodel.rst:664
 msgid "Coroutine functions"
@@ -1842,7 +1842,7 @@ msgstr ""
 "en cada nivel de desenvolvimiento se inserta un objeto de rastreo al frente "
 "del rastreo actual. Cuando se entra a un manejo de excepción, la pila de "
 "rastreo se vuelve disponible para el programa. (Ver sección :ref:`try`.) Es "
-"accesible como el tercer elemento de la tupla devuelta por ``sys."
+"accesible como el tercer elemento de la tupla retornada por ``sys."
 "exc_info()``, y como el atributo ``__traceback__`` de la excepción capturada."
 
 #: ../Doc/reference/datamodel.rst:1068
@@ -1941,7 +1941,7 @@ msgid ""
 msgstr ""
 "Este método toma un argumento *length* de entero simple y calcula "
 "información relacionada con el segmento que el mismo describiría si fuera "
-"aplicado a una secuencia de elementos *length*. Devuelve una tupla de tres "
+"aplicado a una secuencia de elementos *length*. Retorna una tupla de tres "
 "enteros; respectivamente estos son los índices *start* y *stop* y el *step* "
 "o longitud del paso del segmento. Índices faltantes o fuera de los límites "
 "son manipulados de manera consistente con segmentos regulares."
@@ -2104,7 +2104,7 @@ msgid ""
 "If :meth:`__new__` does not return an instance of *cls*, then the new "
 "instance's :meth:`__init__` method will not be invoked."
 msgstr ""
-"Si :meth:`__new__` no devuelve una instancia de *cls*, entonces el nuevo "
+"Si :meth:`__new__` no retorna una instancia de *cls*, entonces el nuevo "
 "método :meth:`__init__` de la instancia no será invocado."
 
 #: ../Doc/reference/datamodel.rst:1209
@@ -2511,7 +2511,7 @@ msgid ""
 msgstr ""
 "Clases definidas por usuario tienen los métodos :meth:`__eq__` y :meth:"
 "`__hash__` por defecto; con ellos, todos los objetos se comparan de manera "
-"desigual (excepto con ellos mismos) y ``x.__hash__()`` devuelve un valor "
+"desigual (excepto con ellos mismos) y ``x.__hash__()`` retorna un valor "
 "apropiado tal que ``x == y`` implique que ``x es y`` y ``hash(x) == "
 "hash(y)``."
 
@@ -2749,7 +2749,7 @@ msgid ""
 "<auditing>` ``object.__setattr__`` with arguments ``obj``, ``name``, "
 "``value``."
 msgstr ""
-"Para ciertas asignaciones de atributos sensibles, genera un :ref:`evento de "
+"Para ciertas asignaciones de atributos sensibles, lanza un :ref:`evento de "
 "auditoría <auditing>` ``object.__setattr__`` con argumentos ``obj``, "
 "``name``, ``value``."
 
@@ -2776,7 +2776,7 @@ msgid ""
 "For certain sensitive attribute deletions, raises an :ref:`auditing event "
 "<auditing>` ``object.__delattr__`` with arguments ``obj`` and ``name``."
 msgstr ""
-"Para ciertas eliminaciones de atributos sensibles, genera un :ref:`evento de "
+"Para ciertas eliminaciones de atributos sensibles, lanza un :ref:`evento de "
 "auditoría <auditing>` ``object.__delattr__`` con argumentos ``obj`` y "
 "``name``."
 
@@ -3735,9 +3735,9 @@ msgid ""
 "instance of *class*. If defined, called to implement ``isinstance(instance, "
 "class)``."
 msgstr ""
-"Devuelve *true* si la instancia *instance* debe ser considerada una "
-"instancia (directa o indirecta) de clase *class*. De ser definida, es "
-"llamado para implementar ``isinstance(instance, class)``."
+"Retorna *true* si la instancia *instance* debe ser considerada una instancia "
+"(directa o indirecta) de clase *class*. De ser definida, es llamado para "
+"implementar ``isinstance(instance, class)``."
 
 #: ../Doc/reference/datamodel.rst:2118
 msgid ""
@@ -3745,7 +3745,7 @@ msgid ""
 "subclass of *class*.  If defined, called to implement ``issubclass(subclass, "
 "class)``."
 msgstr ""
-"Devuelve *true* si la subclase *subclass* debe ser considerada una subclase "
+"Retorna *true* si la subclase *subclass* debe ser considerada una subclase "
 "(directa o indirecta) de clase *class*. De ser definida, es llamado para "
 "implementar ``issubclass(subclass, class)``."
 
